empty-qstringliteral: Don't warn for uic generated files

Since 5.12 this is no longer an issue, since QStringLiteral
was abolished from ui_*.h files.

BUG: 399544