src/checks/level0/empty-qstringliteral.cpp
@@ -24,6 +24,9 @@
 #include "HierarchyUtils.h"
 #include "QtUtils.h"
 #include "TypeUtils.h"
+#include "SourceCompatibilityHelpers.h"
+#include "PreProcessorVisitor.h"
+#include "ClazyContext.h"
 
 #include <clang/AST/AST.h>
 
@@ -59,5 +62,19 @@ void EmptyQStringliteral::VisitStmt(clang::Stmt *stmt)
     if (!getLocStart(stmt).isMacroID())
         return;
 
+    if (maybeIgnoreUic(getLocStart(stmt)))
+        return;
+
     emitWarning(stmt, "Use QString instead of an empty QStringLiteral");
+}
+
+bool EmptyQStringliteral::maybeIgnoreUic(SourceLocation loc) const
+{
+    PreProcessorVisitor *preProcessorVisitor = m_context->preprocessorVisitor;
+
+    // Since 5.12 uic no longer uses QStringLiteral("")
+    if (preProcessorVisitor && preProcessorVisitor->qtVersion() >= 051200)
+        return false;
+
+    return clazy::isUIFile(loc, sm());
 }
